--- a/CodeTalkAPI/CodeTalkAPI/appsettings.json
+++ b/CodeTalkAPI/CodeTalkAPI/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "CodeTalkDBContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
+
 }
