--- a/CodeTalkAPI/CodeTalkAPI/appsettings.json
+++ b/CodeTalkAPI/CodeTalkAPI/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "CodeTalkDBContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CodeTalkDBContext;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 
